feat: add tailwind css

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MPC Hello</title>
-  <link rel="stylesheet" href="src/styles.css">
+  <title>SocialMPC</title>
+  <link rel="stylesheet" href="src/index.css">
 </head>
 
 <body>
   <div class="app">
-    <div class="header">MPC Hello</div>
+    <div class="header">SocialMPC</div>
+
+    <h1 className="text-3xl font-bold bg-blue-600 text-gray-500">
+      Hello world!
+    </h1>
 
     <div class="step-container">
       <div id="step-1" class="step">
         <div style="text-align: left;">
-          Welcome to the hello-world of MPC
-          (<a href="https://github.com/cedoor/mpc-cli/tree/main/packages/template-hello-vite">view source</a>).
+          Welcome to the SocialMPC
         </div>
         <div style="text-align: left; margin-top: 1em;">
           To start, one party should click host. This will generate a code that
